--- a/UnoClass11.6
+++ b/UnoClass11.6
@@ -79,17 +79,15 @@ class Deck:
 			hand = hand + str(self.cards[i]) +"\n"
 		return str(hand)
 
-
-players = ["Jack", "Anan", "Billy", "Bobby"]
+enternames = ["Jack", "Anan", "Billy", "Bobby"] #this list will be used to call on the players names
+players = ["Jack", "Anan", "Billy", "Bobby"] #this list will be used to call on each player's hand
 drawpile = Deck(1) # Make a full deck
 discard = Deck(0) # Create an initially empty discard pile
 
 
 
 def setup():
-	global drawpile
 	global players
-	global discard
 	for i in range(len(players)): # Make an empty deck for each player in the game
 		players[i] = Deck(0)
 
@@ -97,16 +95,14 @@ def startgame():
 	global drawpile
 	global players
 	global discard
+
 	for i in range(7): # For each player, deal 7 cards into their deck
 		for z in range(len(players)):
 			players[z].addcard(drawpile.deal(0))
-	# for r in range(len(players)):
-	# 	print(players[r])
-	# 	print("\n")
-	#print(drawpile)
+
 	while True: # Start the game off by adding a card to the discard pile
 		discard.addtotop(drawpile.deal(0)) # Keep adding cards
-		if discard.cards[0].rank <= 9: # Until a regular number card is on top
+		if discard.cards[0].rank <= 9: # Until a regular number card is on top, burning cards in the process
 			break
 
 
@@ -115,12 +111,13 @@ def turn(player):
 	global players
 	global discard
 
-	print("Player" + str(player+ 1))
+	print("\n")
+	print("Player " + str(player+ 1) +": "+ str(enternames[player]) +"\n") #displays the current player
 
 	players[player] # Displays the player name
 	print(players[player])
 
-	print("\n")
+	print("\nDiscard Pile: ")
 	print(discard.cards[0])
 
 
@@ -129,26 +126,33 @@ def turn(player):
 	playedcard = Card(4, 0)
 
 	while True:
-		move1 = int(input("Type position of card(#) or draw card(10)"))
+		print("\n")
+		move1 = int(input("Type position of card(#) or draw card(10)")) -1
 		if 0<=move1<=(len(players[player].cards)-1):
 			if players[player].cards[move1].rank == rankp or players[player].cards[move1].color == colorp or players[player].cards[move1].color == 4:
 				playedcard = players[player].cards[move1]
 				discard.addtotop(players[player].deal(move1))
 				break
-		elif move1 == 10:
+		elif move1 == 9:
 			players[player].addcard(drawpile.deal(0))
+			print("\n")
+			print("You drew a " + str(players[player].cards[-1]))
 			while 1==1:
-				move2 = int(input("Type position of card(#) or end turn(10)"))
+				print("\n")
+				move2 = int(input("Type position of card(#) or end turn(10)"))-1
 				if 0<=move2<=(len(players[player].cards) -1):
 					if players[player].cards[move2].rank == rankp or players[player].cards[move2].color == colorp or players[player].cards[move1].color == 4:
 						playedcard = players[player].cards[move2]
 						discard.addtotop(players[player].deal(move2))
 						break
-				elif move2 == 10:
+				elif move2 == 9:
 					break
 			break
-	print(str(playedcard))
-	if playedcard.rank == 0 and playedcard.color == 4:
+
+
+	if len(players[player].cards) == 0:
+		return 10
+	elif playedcard.rank == 0 and playedcard.color == 4:
 		return 1
 	elif playedcard.rank <= 9:
 		return 1
@@ -170,6 +174,7 @@ def turn(player):
 		choicecolor = input("Choice color Blue(0), Red(1), Green(2), Yellow(3)")
 		discard.cards[0] = Card(choicecolor, discard.cards[0].rank)
 		return 1
+
   
 
 print("________________________________")
@@ -179,12 +184,14 @@ turner = 0 #which players turn is it?
 direction = 1
 while True:
 	value = turn(turner)
-	print(value)
+	if value == 10:
+		break
 	if value == -1:
 		direction = (-1)*direction
 		value = 1
-	turner = (turner + (value * direction))%4
+	turner = (turner + (value * direction))%(len(players))
 
+print("You Win")
 
 
 
